--- a/Befehlsliste.html
+++ b/Befehlsliste.html
@@ -3,7 +3,7 @@
 	<!-- SCRIPTE -->
 	<script src="script/befehlsliste.js"></script>
 	
-	<body>
+	<body onload="loadXMLDoc()">
 		<p id="demo"></p>
 	</body>
 </html>
